<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ishyfishy.musiccrowdsourcer.NewGroup"
    tools:showIn="@layout/activity_new_group">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_group_textview"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name_hint"
        android:id="@+id/group_name_id"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/expire_hour_textview"
            android:id="@+id/expire_time_id"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/num_people_textview"
            android:id="@+id/num_people_id"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_songs"
        android:id="@+id/select_song_id"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_group"
        android:id="@+id/init_group_id"/>

</LinearLayout>
